query entry react view

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -44,6 +44,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>.match() entry done</li>
+    <li>passing query in react entry</li>
   </ol>
   <hr />
 <br>
