--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,7 +23,30 @@
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
       <p lang="en" dir="ltr">Design forms? Check out <a href="https://t.co/9ZpE837gWy">https://t.co/9ZpE837gWy</a> video is so 😂 <a href="https://twitter.com/hashtag/ux?src=hash&amp;ref_src=twsrc%5Etfw">#ux</a> <a href="https://twitter.com/hashtag/fuckdropdowns?src=hash&amp;ref_src=twsrc%5Etfw">#fuckdropdowns</a></p>&mdash; Nicole Commander (@nicolecommander) <a href="https://twitter.com/nicolecommander/status/923081708102066176?ref_src=twsrc%5Etfw">October 25, 2017</a></blockquote>
   -->
-  <h2 class="date">Sunday December 11th, 2017</h2>
+  <h2 class="date">Tuesday December 11th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">I had no idea that .match() would have so much use and influence over my life. Absolutely grateful for it now. </h3>
+  <pre class="prettyprint plain-frame0 w50"> var found = words.filter(data => {
+    return data.word.toLowerCase().match(searchTerm.toLowerCase()) ||
+        data.meaning.toLowerCase().match(searchTerm.toLowerCase()) ||
+        data.example.toLowerCase().match(searchTerm.toLowerCase())
+  })</pre>
+<h3>Finished one react course--now going thru it again. Painpoints are still state. But it's coming easier now. this.whateverthehell.bind(this)... is less of a problem for me, thank god. --but who knows...</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Finished one react course--now going thru it again.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>No tasks today for codejournal. --Just work</li>
+  </ol>
+  <hr />
+
+<hr>
+  <h2 class="date">Monday December 11th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an Array is returned... Working today on an api call to fill out my components. <br>
   Watched an <a href="https://youtu.be/e-5obm1G_FY" target="_blank">incredible</a> video on functional programming. Very inspiring.</h3>
