--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -26,59 +26,28 @@
 
   <h2 class="date">Thursday December 14th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
-  <h3 class="subtitle">Incredible day...Sister had a baby. Wow. </h3>
-  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Hello World&quot; <a href="https://t.co/QblazpdZU7">pic.twitter.com/QblazpdZU7</a></p>&mdash; Stack Beauverflow (@beau_dev) <a href="https://twitter.com/beau_dev/status/941435048938569729?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote>
+  <h3 class="subtitle">Incredible day...Sister had a baby.<br>
+    If there's a woman in the room, in the house or in the mirror, tell her how miraculous & how capable she is... </h3>
+    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">   <p lang="en" dir="ltr">&quot;Hello World&quot; <a href="https://t.co/QblazpdZU7">pic.twitter.com/QblazpdZU7</a></p>&mdash; Stack Beauverflow (@beau_dev) <a href="https://twitter.com/beau_dev/status/941435048938569729?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote>
 
   <br>
   <h3>To do:</h3>
+  <li>Working on a class for our school using component parts of an svg and GSAP! --There is so much repetitive boring stuff in the prepared javascript curriculum. It's all necessary, but... these kids don't need to know about truthy and falsey values quite yet. --Thank God. lol<br>
+  Anyway... My plan is to put all of these kids into codepen and get them exploring and get them comfortable as soon as possible.</li>
   <ol class="todo">
+    <li>
+      <img class="right w20" src="./img/pig.svg" alt="pig svg">
+      <picture src="./img/pig.svg"></picture>
+    </li>
     <li></li>
-    <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> Limited time today, But motivation is high.</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Lesson 6 done</li>
   </ol>
-  <hr />
-  <!--
-<svg xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 696 608">
-  <linearGradient id="a" x1="120" x2="559" y1="411" y2="207" gradientUnits="userSpaceOnUse">
-    <stop offset="0" stop-color="#ff7bac"/>
-    <stop offset="1" stop-color="#efabb7"/>
-  </linearGradient>
-  <ellipse cx="351" cy="303" fill="url(#a)" stroke="#000" stroke-miterlimit="10" stroke-width="3" rx="337" ry="296"/>
-  <path fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="3" d="M195 283c5-16 62-32 85-25m231 25c-6-17-64-32-86-23"/>
-  <ellipse cx="351" cy="413" fill="#FF7BAC" rx="65" ry="49"/>
-  <ellipse cx="351" cy="413" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="3" rx="65" ry="49"/>
-<g id="ears">
-	<path id="lt-ear" fill="#FF7BAC" stroke="#000000" stroke-width="3.6976" stroke-miterlimit="10" d="M61.2,262.3
-		c-17.9-45-47.1-87.5-53.5-136.4c-2.7-20.6-0.6-44.8,12.1-62c11.2-15.2,32.8-27.8,52-26.6c9.7,0.6,20,3.7,28.9,7.6
-		c4.6,2,9,4.4,13,7.4c2.5,1.9,8.7,6.2,8.9,9.6c9.7-3.7,20.5-2.9,30.5-0.7c32.7,2,54.8,34.2,53.6,65.7c-1.4,32.6-24.8,57.5-49.4,76.3
-		c-31.1,22.3-64.6,38.3-96,59.8"/>
-	<path id="rt-ear" fill="#FF7BAC" stroke="#000000" stroke-width="4.0747" stroke-miterlimit="10" d="M583,271.8
-		c-36.6-38.8-83.8-70.5-110.2-117.9c-11.1-20-18.8-45.6-12.8-68.4c5.3-20.1,22.3-41.8,42.4-48.4c10.2-3.4,22-4.3,32.7-3.9
-		c5.5,0.2,11,0.9,16.3,2.3c3.3,0.9,11.4,2.8,13,6.2c8.4-7.7,19.8-11.4,30.9-13.1c34.2-11.3,70,12.8,81.6,45.4
-		c11.8,33.9-2,69-19.6,98.3c-22.8,35.5-50.5,65.5-74,100.3"/>
-</g>
-  <path id="tongue" fill="#FF7BAC" stroke="#000" stroke-miterlimit="10" stroke-width="3" d="M491 452l-14 17-17 19-6 6-6 7 1 1c33 30 70 42 82 29 12-14-6-48-39-78l-1-1z"/>
-  
-  <path  id="tongue-crease" fill="#FF7BAC" stroke="#000" stroke-miterlimit="10" d="M465 482c21 19 45 36 46 34"/>
-
-  <path id="lips" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="6" d="M491 437c5 36-62 82-133 92"/>
-
-  <g class="nostrils" fill="#FF7BAC" stroke="#000" stroke-miterlimit="10" stroke-width="3">
-    <ellipse id="nostril-rt" cx="376" cy="402" rx="14" ry="23"/>
-    <ellipse id="nostril-lt" cx="324" cy="402" rx="14" ry="23"/>
-  </g>
-  <circle id="eye-ball-rt" cx="259" cy="319" r="26" stroke="#000" stroke-miterlimit="10" stroke-width="3"/>
-  <circle id="eye-shine-lt" cx="268" cy="308" r="11" fill="#FFF"/>
-  <circle id="eye-ball-rt" cx="440" cy="319" r="26" stroke="#000" stroke-miterlimit="10" stroke-width="3"/>
-  <circle id="eye-shine-rt" cx="449" cy="308" r="11" fill="#FFF"/>
-</svg>
-
-  -->
+  <hr/>
+ 
   <h2 class="date">Tuesday December 11th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">I had no idea that .match() would have so much use and influence over my life. Absolutely grateful for it now. </h3>
@@ -228,7 +197,7 @@ class MyGreatComponent extends React.Component {
   <ol class="todo">
     <li>Notes on Kyle Simpson's 'this' rules.</li>
     <li>Entry on call/apply/bind() --One that actually explains it well.</li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> None!</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
@@ -316,7 +285,7 @@ class MyGreatComponent extends React.Component {
 <ol class="todo">
   <li>ECMA View: Add entry for !! operator coercing <em>true</em> & <em>false</em> keywords from truthy & falsey values</li>
   <li>JS Curriculum Building today and tomorrow</li>
-  <li><span class="ltred">Potential Blocks:</span></li>
+  <li><span class="ltred">Potential Blocks:</span> None!</li>
 </ol><br>
 <h3>Done: </h3>
 <ol class="done">
@@ -336,7 +305,7 @@ By the way... I'm not offended at all. In fact, I really like the guy and respec
   <ol class="todo">
     <li>Studying Python today. I forget how much fun it is!</li>
     <li>Put site (for work) into JSX components</li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> None!</li>
   </ol><br>
   <h3>Done:</h3>
   <ol class="done">
@@ -424,7 +393,7 @@ By the way... I'm not offended at all. In fact, I really like the guy and respec
   <ol class="todo">
     <li>More Webpack work</li>
     <li>React Training: Wesbos... Again.</li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> time is limited today</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
