--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,6 +23,22 @@
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Hello World&quot; <a href="https://t.co/QblazpdZU7">pic.twitter.com/QblazpdZU7</a></p>&mdash; Stack Beauverflow (@beau_dev) <a href="https://twitter.com/beau_dev/status/941435048938569729?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote>
   -->
+  <h2 class="date">Friday December 15th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Running Gulp-tasks, going through it once again. Step-by-step. Will add entry to the journal. Completed another character for my students & got a great idea for interface in illustrator.</h3>
+  
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Gulp Task entry</li>
+    <li>Styling inline in react for HCC project (using .js not the imported 3rd Party) </li>
+    <li><span class="ltred">Potential Blocks:</span>none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>pending...</li>
+  </ol>
+  <hr />
 
   <h2 class="date">Thursday December 14th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
