--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -26,7 +26,7 @@
   <h2 class="date">Friday December 15th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Running Gulp-tasks, going through it once again. Step-by-step. Will add entry to the journal. Completed another character for my students & got a great idea for interface in illustrator.</h3>
-  
+  <img class="w20" src="./img/dog.svg" alt="dog.svg">
   <br>
   <h3>To do:</h3>
   <ol class="todo">
