--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,6 +23,42 @@
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Hello World&quot; <a href="https://t.co/QblazpdZU7">pic.twitter.com/QblazpdZU7</a></p>&mdash; Stack Beauverflow (@beau_dev) <a href="https://twitter.com/beau_dev/status/941435048938569729?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote>
   -->
+  <h2 class="date">Tuesday December 19th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle"><a href="https://github.com/Beauvelop/gulp_scaffold" target="_blank">Gulp Scaffold</a> repo is completely completed.<br>
+  Been doing lots of SVG components to be manipulated in codepen for upcoming spring Javascript class. Objects, Arrays, Loops (God help me explain syntax to an 8-year old),functions, function calls & click-events...
+--came across an interesting problem with <img src="./img/treesvg.png" alt="svg gree" class="w40 ctr">
+The issue is, I have all those leaves--out of Illustrator each with an individual linear gradient. Since each gradient is the same, I removed all but one and pointed them all (259 of them) to the one instance of the color gradient
+<pre class="prettyprint w50 ctr">
+    < linearGradient id="a" x1="162" x2="162" y1="103" y2="89" gradientTransform="rotate(-59 261 53)" gradientUnits="userSpaceOnUse" >
+        < stop offset="0" stop-color="#39b54a" / >
+        < stop offset="1" stop-color="#006837" / >
+      < /linearGradient >
+    < g class="leaves" >
+      < path id="leaf1" d="M255 165l2-2-1-3-2-1-10-2 5 10 2 1h3l1-3z" / >
+      < path id="leaf2" d="M262 158l2-3-1-2-2-2-9-3 4 10 1 2h3l2-2z" / >
+   ...
+   /* (styles.css)
+   .leaves {
+    fill: url(#a);
+ }
+   */
+</pre>
+The problem is rather than each having the gradient... they all--as a collective whole--"participate" in the color gradient.
+</h3>
+  
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Gulp Task entry</li>
+    <li>Styling inline in react for HCC project (using .js not the imported 3rd Party) </li>
+    <li><span class="ltred">Potential Blocks:</span>none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>pending...</li>
+  </ol>
+  <hr />
   <h2 class="date">Friday December 15th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Running Gulp-tasks, going through it once again. Step-by-step. Will add entry to the journal. Completed another character for my students & got a great idea for interface in illustrator.</h3>
@@ -124,7 +160,7 @@ class MyGreatComponent extends React.Component {
 ...
 <span class="black clean">If you are going to use <em>this.state</em> in the contstructor, React says you MUST use <em>this.setState({...})</em> in queryHandler Fn...</span>
 
-<img class="w30" src="./img/setstate.png" alt="set state image">
+<img class="w30" src="./img/setstate.jpg" alt="set state image">
 
 --In other news, worked all weekend on syllabus for my kids. It's going to be a great deal of careful hand-holding... Considering using svg to give them a visual "payoff" for iterating over arrays. If it's not executed carefully, it's a recipe for frustration.</h3>
 
