--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,6 +23,27 @@
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Hello World&quot; <a href="https://t.co/QblazpdZU7">pic.twitter.com/QblazpdZU7</a></p>&mdash; Stack Beauverflow (@beau_dev) <a href="https://twitter.com/beau_dev/status/941435048938569729?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote>
   -->
+  <h2 class="date">Friday December 1st, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">A great deal of work done on JS syllabus. objects --> Arrays --> loops --> events/functions --> randomization... It's going to be a bear to get it right, but it's incredible fun. I did something smart. I abandoned the woof.js platform and wend to codepen.<br>
+  Going to be using codepen for the duration.
+  <img class="w40 right shadn"src="./img/landscape.png" alt="js curriculum canvas-like landscape svg">
+  <br>
+  Twinkling stars, floating UFO, moon, clouds, araura borealis (?), dog, sounds... Lots of stuff going on here.
+</h3>
+  
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Complete JQuery set up for pig svg class teaching objects.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> none. Motivation high</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Tuesday December 19th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle"><a href="https://github.com/Beauvelop/gulp_scaffold" target="_blank">Gulp Scaffold</a> repo is completely completed.<br>
